Fixed alignment of accordion titles

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -157,6 +157,7 @@
     font-size: $font-size-base;
     color: $link-color;
     cursor: pointer;
+    text-align: inherit;
 
     &::before {
       @extend %icon-base;
